--- a/app/src/main/res/layout/add_step.xml
+++ b/app/src/main/res/layout/add_step.xml
@@ -29,7 +29,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:hint="@string/step_title"
-        android:inputType="text"
+        android:inputType="textCapSentences"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textview_add_sop_step_count" />
