--- a/app/src/main/res/layout/activity_step.xml
+++ b/app/src/main/res/layout/activity_step.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,46 +17,6 @@
 
     <!--THINGS I WANT TO SHOW (STEP TITLE, PICTURE, DESCRIPTION, STEP NUMBER-->
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="1dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.13" />
-
-    <TextView
-        android:id="@+id/textview_step_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="21sp"
-        app:layout_constraintBottom_toTopOf="@id/guideline2"
-        app:layout_constraintLeft_toRightOf="@id/guideline"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="This is a sample of step title" />
-
-    <ImageView
-        android:id="@+id/imageview_step_picture"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        tools:src="@drawable/mysop_logo"
-        android:layout_margin="12dp"
-        app:layout_constraintLeft_toRightOf="@id/guideline"
-        app:layout_constraintRight_toRightOf="parent"
-        android:contentDescription="@string/page_image"
-        app:layout_constraintTop_toBottomOf="@id/guideline2" />
-
-    <TextView
-        android:id="@+id/textview_step_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="hjedjfweckjwlenclkfwn"
-        android:layout_marginTop="12dp"
-        android:textSize="18sp"
-        android:padding="8dp"
-        app:layout_constraintLeft_toRightOf="@id/guideline"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageview_step_picture"/>
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
@@ -64,13 +25,69 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.1" />
 
+    <TextView
+        android:id="@+id/textview_step_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="18dp"
+        android:gravity="center"
+        android:maxLines="2"
+        android:padding="6dp"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        tools:text="This is a sample of step title xcedcdecdc" />
+
+    <RelativeLayout
+        android:id="@+id/imageview_step_picture_layout"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_margin="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@id/textview_step_title">
+    <ImageView
+        android:id="@+id/imageview_step_picture"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/page_image"
+        tools:src="@drawable/handbook" />
+
+    <TextView
+        android:id="@+id/no_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/no_image"
+        android:textSize="16sp"
+        android:visibility="gone"/>
+
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/textview_step_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:padding="8dp"
+        android:textSize="21sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@id/imageview_step_picture_layout"
+        tools:text="hjedjfweckjwlenclkfwn" />
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/guideline"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@id/textview_step_description">
 
     <Button
