--- a/app/src/main/res/layout/activity_step.xml
+++ b/app/src/main/res/layout/activity_step.xml
@@ -70,7 +70,7 @@
 
     <TextView
         android:id="@+id/textview_step_description"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
@@ -79,7 +79,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@id/imageview_step_picture_layout"
-        tools:text="hjedjfweckjwlenclkfwn" />
+        tools:text="hjedjfweckjwlenclkfwnknknknknknknknknknnknnnkknnknknknknknknknk" />
 
     <LinearLayout
         android:layout_width="0dp"
