--- a/app/src/main/res/layout/books_list_layout.xml
+++ b/app/src/main/res/layout/books_list_layout.xml
@@ -72,12 +72,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
                 android:layout_marginBottom="10dp"
-                android:layout_marginEnd="35dp"
+                android:layout_marginStart="40dp"
                 android:contentDescription="@string/book_shared"
-                android:src="@drawable/ic_action_share"
-                android:visibility="gone" />
+                android:src="@drawable/collab"
+                android:visibility="gone"/>
 
         </RelativeLayout>
 
