--- a/app/src/main/res/layout/add_sop.xml
+++ b/app/src/main/res/layout/add_sop.xml
@@ -21,13 +21,14 @@
         android:hint="@string/handbook_title"
         app:layout_constraintTop_toBottomOf="@id/textview_new_sop_label"/>
 
-
     <TextView
         android:id="@+id/book_color_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="6dp"
-        android:text="@string/color_of_book"
+        android:layout_marginStart="20dp"
+        android:text="@string/priority"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edittext_add_sop_title"/>
 
     <LinearLayout
@@ -38,40 +39,28 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/book_color_label">
 
-        <ImageView android:id="@+id/book_color_red"
-            android:layout_width="40dp"
+        <ImageView android:id="@+id/book_color_high"
+            android:layout_width="50dp"
             android:layout_height="40dp"
             android:layout_margin="8dp"
             android:background="@color/logoRedBookColor"
             android:contentDescription="@string/red_book" />
 
-        <ImageView android:id="@+id/book_color_green"
-            android:layout_width="40dp"
+        <ImageView android:id="@+id/book_color_med"
+            android:layout_width="50dp"
             android:layout_height="40dp"
             android:layout_margin="8dp"
             android:background="@color/logoGreenBookColor"
             android:contentDescription="@string/green_book" />
 
-        <ImageView android:id="@+id/book_color_blue"
-            android:layout_width="40dp"
+        <ImageView android:id="@+id/book_color_low"
+            android:layout_width="50dp"
             android:layout_height="40dp"
             android:layout_margin="8dp"
             android:background="@color/logoBlueBookColor"
             android:contentDescription="@string/blue_book" />
 
-        <ImageView android:id="@+id/book_color_orange"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_margin="8dp"
-            android:background="@color/logoOrangeBookColor"
-            android:contentDescription="@string/orange_book" />
 
-        <ImageView android:id="@+id/book_color_yellow"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_margin="8dp"
-            android:background="@color/logoYellowBookColor"
-            android:contentDescription="@string/yellow_book" />
 
     </LinearLayout>
 
