--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,11 +5,9 @@
     <color name="colorAccent">#E5777D</color>
 
     <!--COLORS OF THE LOGO-->
-    <color name="logoBlueBookColor">#4DA5B9</color>
-    <color name="logoGreenBookColor">#41A85E</color>
-    <color name="logoYellowBookColor">#FBD741</color>
+    <color name="logoBlueBookColor">#e2cc3e</color>
+    <color name="logoGreenBookColor">#ec9c11</color>
     <color name="logoRedBookColor">#DA4343</color>
-    <color name="logoOrangeBookColor">#fc9c26</color>
 
     <color name="text">#1d1d1d</color>
 
