--- a/app/src/main/res/layout/categories_layout.xml
+++ b/app/src/main/res/layout/categories_layout.xml
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:padding="4dp"
         android:contentDescription="@string/shelf_share"
-        android:src="@drawable/collab"
+        android:src="@drawable/collab_out"
         android:visibility="gone"/>
 
 
